Responsive design bug fixes. Implemented ranges instead of specific widths

--- a/Styles/lightDesign.css
+++ b/Styles/lightDesign.css
@@ -827,7 +827,7 @@ footer {
 }
 
 /* xs screens */
-@media screen and (device-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
+@media screen and (375px <= width <= 424px) and (-webkit-min-device-pixel-ratio: 2) {
   /* General */
   .hide {
     opacity: 0;
@@ -968,7 +968,7 @@ footer {
   }
 }
 
-@media screen and (device-width: 425px) and (-webkit-min-device-pixel-ratio: 2) {
+@media screen and (425px <= width <= 767px) and (-webkit-min-device-pixel-ratio: 2) {
   /* General */
   .hide {
     opacity: 0;
@@ -1113,7 +1113,7 @@ footer {
   }
 }
 
-@media screen and (device-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
+@media screen and (768px <= width <= 1023px) and (-webkit-min-device-pixel-ratio: 2) {
   /* General */
   .hide {
     opacity: 0;
