--- a/Styles/lightDesign.css
+++ b/Styles/lightDesign.css
@@ -936,8 +936,15 @@ footer {
   #complete {
     min-width: 9em;
   }
+  .mainPictures {
+    border-radius: 200px;
+    box-shadow: 2px 2px 3px #111812;
+    margin: 20px;
+    transition: 0.2s ease-in;
+  }
 
-  img.projectPictures {
+  img.mainPictures {
+    aspect-ratio: 1/1;
     height: 30vh;
   }
   /* End Projects */
